- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P2: Important
 - 
    6.5.2, 6.6.0 Beta2, dev
 - 
    None
 
- 
        
 - 
        5
 - 
        f14110888 (dev), 65eae6ad4 (6.6), 615a90e9d (6.5)
 - 
        Foundation Sprint 86, Foundation Sprint 87
 
I don't have an ASAN trace for this, but it clearly leaks the slot object when it hits the early return on thread mismatch. But it also seems to have the same problem as in the linked QHostInfo issue, leaking when the event isn't received.
- relates to
 - 
                    
QTBUG-115263 QHostInfo is leaking QSlotObjectBase in tst_QHostInfo::lookupConnectToFunctionPointerDeleted()
-         
 - Closed
 
 -